# as

./: meson.build
.cache/clangd/index/: as.c.736A4D27503D10A1.idx  as.h.F7C5809437040AFA.idx  ast.c.D70B5FC5B96C1B5F.idx  ast.h.A431F3F8D6EAA988.idx  codegen.c.D0B1DDC959ECD9C0.idx  codegen.h.F4A14CF49367CABE.idx  lex.c.05B7B52F18049B96.idx  lex.h.D09D7A64237D73D3.idx  log.c.F1E08D1F5729FA4E.idx  log.h.E390454A8AA289C9.idx  main.c.8F2757E8560FA821.idx  map.c.72244DD24D0939E2.idx  map.h.EDB03853B61732CC.idx  vec.c.B3F5D63D2A3B25C4.idx  vec.h.9088DF0A20EBEDF3.idx
src/: as.c  as.h  ast.c  ast.h  codegen.c  lex.c  lex.h  main.c
